cluster-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster_service
          http_filters:
          - name: envoy.ext_authz
            config:
              http_service:
                server_uri:
                  uri: downstream_alias:8081
                  cluster: downstream
                  timeout: 0.25s
                authorization_request:
                  allowed_headers:
                    patterns:
                      exact: authorization
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: cluster_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: cluster_alias
                port_value: 8082
  - name: downstream
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: downstream_alias
        port_value: 8081
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
